--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -29,11 +29,12 @@ label {
   display: block;
 }
 
-section > .title-section {
+section>.title-section {
   margin-block-end: 2rem;
 
   font-size: 1.2em;
 }
+
 /* GLOBAL */
 
 /* Start of Header */
@@ -52,6 +53,7 @@ header {
 
   font-size: 1.7em;
 }
+
 /* End of Header */
 
 /* Start of Main */
@@ -62,44 +64,77 @@ main {
 /* Search bar */
 .floating-form {
   background-color: white;
-    padding: 16px;
-      border-radius: 5px;
-        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-        }
-        .search-form {
-          display: flex;
-            gap: 16px;
-            }
-            .search-form .form-group {
-              flex-grow: 1;
-              }
-              .search-form .form-group input {
-                display: block;
-                  width: 100%;
-                    height: 60px;
-                      padding: 14px 10px 0 10px;
-                        border-inline: none;
-                          border-block-start: none;
-                            border-block-end: 1px solid cornflowerblue;
-                              font-size: 1em;
-                              }
-                              .search-form button {
-                                border: 0;
-                                  padding-inline: 24px;
-                                    background-color: cornflowerblue;
-                                      text-transform: uppercase;
-                                        font-size: 1rem;
-                                          color: white;
-                                            cursor: pointer;
-                                              transition: 100ms linear;
-                                              }
-                                              .search-form button:hover {
-                                                background-color: #4485ff;
-                                                }
-                                                .search-form button:active {
-                                                  background-color: #6c9aee;
-                                                  }
-                                                  /* Search bar */
+  padding: 16px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+}
+
+.search-form {
+  display: flex;
+  gap: 16px;
+}
+
+.search-form .form-group {
+  flex-grow: 1;
+  position: relative;
+}
+
+.search-form .form-group input {
+  display: block;
+  width: 100%;
+  height: 60px;
+  padding: 14px 10px 0 10px;
+  border-inline: none;
+  border-block-start: none;
+  border-block-end: 1px solid cornflowerblue;
+  font-size: 1em;
+}
+
+.search-form .form-group input:focus-visible {
+  outline: 0;
+}
+
+.search-form .form-group label {
+  line-height: 60px;
+  font-size: 1em;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: cornflowerblue;
+  white-space: nowrap;
+  position: absolute;
+  top: 0;
+  left: 20px;
+  user-select: none;
+  pointer-events: none;
+}
+
+.search-form .form-group input:focus-visible ~ label,
+.search-form .form-group input:valid ~ label {
+  left: 10px;
+  top: -16px;
+  font-size: 0.8em;
+}
+
+.search-form button {
+  border: 0;
+  padding-inline: 24px;
+  background-color: cornflowerblue;
+  text-transform: uppercase;
+  font-size: 1rem;
+  color: white;
+  cursor: pointer;
+  transition: 100ms linear;
+}
+
+.search-form button:hover {
+  background-color: #4485ff;
+}
+
+.search-form button:active {
+  background-color: #6c9aee;
+}
+
+/* Search bar */
 
 .club-list-container {
   margin-block-start: 32px;
@@ -109,18 +144,18 @@ main {
   overflow: auto;
 }
 
-.club-list .list > * {
+.club-list .list>* {
   float: left;
   width: 49%;
 
   margin-block-end: 3%;
 }
 
-.club-list .list > *:nth-child(odd) {
+.club-list .list>*:nth-child(odd) {
   float: left;
 }
 
-.club-list .list > *:nth-child(even) {
+.club-list .list>*:nth-child(even) {
   margin-inline-start: 2%;
 }
 
@@ -148,7 +183,8 @@ main {
 
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 5; /* number of lines to show */
+  /* -webkit-line-clamp: 5; */
+  /* number of lines to show */
 }
 
 .club-list-container .placeholder {
@@ -158,6 +194,7 @@ main {
   font-weight: lighter;
   color: rgba(0, 0, 0, 0.5);
 }
+
 /* End of Main */
 
 /* Start of Footer */
@@ -176,4 +213,5 @@ footer .container {
 
   text-align: center;
 }
+
 /* End of Footer */
