--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -106,6 +106,7 @@ main {
   left: 20px;
   user-select: none;
   pointer-events: none;
+  transition: 150ms all ease-in-out;
 }
 
 .search-form .form-group input:focus-visible ~ label,
