--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -62,10 +62,16 @@ main {
 }
 
 /* Search bar */
+.search-bar-container {
+  display: inline;
+}
+
 .floating-form {
   background-color: white;
   padding: 16px;
   border-radius: 5px;
+  position: sticky;
+  top: 10px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 }
 
